# curves

./: .gitignore  LICENSE  README.md
curves/: .gitignore  CMakeLists.txt  Doxyfile.in  curvesConfig.cmake.in  package.xml
curves/cmake/: curves-extras.cmake.in
curves/doc/doxygen/: CMakeLists.txt  doxygen.config.in  mainpage.dox
curves/etc/: notes.md
curves/include/curves/: Coefficient.hpp  CoefficientImplementation.hpp  CoefficientManagerBase.hpp  Coefficients.hpp  CubicHermiteE3Curve.hpp  CubicHermiteSE3Curve.hpp  Curve.hpp  CurveBase.hpp  DiscreteSE3Curve.hpp  Evaluator.hpp  EvaluatorBase.hpp  GaussianProcessPriorFactorEvaluator.hpp  GaussianProcessVectorSpaceCurve.hpp  GaussianProcessVectorSpaceEvaluator.hpp  GaussianProcessVectorSpacePrior.hpp  HermiteCoefficientManager.hpp  KeyCoefficientTime.hpp  KeyCoefficientTimeTemplate.hpp  KeyGenerator.hpp  LinearInterpolationCurve.hpp  LinearInterpolationVectorSpaceCurve-inl.hpp  LinearInterpolationVectorSpaceCurve.hpp  LinearInterpolationVectorSpaceEvaluator.hpp  LinearSdeGaussianProcessPriorFactorEvaluator.hpp  LinearSdeGaussianProcessVectorSpacePrior.hpp  LocalSupport2CoefficientManager-inl.hpp  LocalSupport2CoefficientManager.hpp  LtiCvGaussianProcessVectorSpaceCurve.hpp  LtiCvGaussianProcessVectorSpaceEvaluator.hpp  LtiCvGaussianProcessVectorSpacePrior.hpp  LtiSdeGaussianProcessVectorSpacePrior.hpp  PolynomialSpline.hpp  PolynomialSplineBase.hpp  PolynomialSplineContainer.hpp  PolynomialSplineContainer.tpp  PolynomialSplineCubic.hpp  PolynomialSplineQuintic.hpp  PolynomialSplineScalarCurve.hpp  PolynomialSplineVectorSpaceCurve.hpp  Pose2_Expressions.hpp  (+29 more)
curves/matlab/: readCubicHermiteSE3Curve.m
curves/src/: Coefficient.cpp  CoefficientImplementation.cpp  CoefficientManagerBase.cpp  Coefficients.cpp  CubicHermiteE3Curve.cpp  CubicHermiteSE3Curve.cpp  Curve.cpp  CurveBase.cpp  DiscreteSE3Curve.cpp  Evaluator.cpp  EvaluatorBase.cpp  GaussianProcessPriorFactorEvaluator.cpp  GaussianProcessVectorSpaceCurve.cpp  GaussianProcessVectorSpaceEvaluator.cpp  HermiteCoefficientManager.cpp  KeyGenerator.cpp  LinearInterpolationVectorSpaceCurve.cpp  LinearInterpolationVectorSpaceEvaluator.cpp  LinearSdeGaussianProcessPriorFactorEvaluator.cpp  LinearSdeGaussianProcessVectorSpacePrior.cpp  LocalSupport2CoefficientManager.cpp  LtiCvGaussianProcessVectorSpaceCurve.cpp  LtiCvGaussianProcessVectorSpaceEvaluator.cpp  LtiCvGaussianProcessVectorSpacePrior.cpp  LtiSdeGaussianProcessVectorSpacePrior.cpp  PolynomialSplineBase.cpp  PolynomialSplineContainer.cpp  PolynomialSplineCubic.cpp  PolynomialSplineQuintic.cpp  SE2Curve.cpp  SE3CoefficientImplementation.cpp  SE3Curve.cpp  SE3CurveFactory.cpp  SdeGaussianProcessCoefficientManager.cpp  SemiDiscreteSE3Curve.cpp  SlerpSE2Curve.cpp  SlerpSE3Curve.cpp  SlerpSE3Evaluator.cpp  SlurpSE3Curve.cpp  SlurpSE3Evaluator.cpp  (+6 more)
curves/test/: .gitignore  3D_sinus_circle_GPS_clean.csv  3D_sinus_circle_coefficients.csv  3D_sinus_circle_coefficients_composition.csv  3D_sinus_circle_matches.csv  CubicHermiteE3CurveTest.cpp  CubicHermiteSE3CurveTest.cpp  MITb_edges_measurements.csv  MITb_expected_ISAM2_result.csv  MITb_expected_result.csv  MITb_loop_closure.csv  MITb_vertex_initials.csv  PolynomialSplineContainerTest.cpp  PolynomialSplineQuinticScalarCurveTest.cpp  PolynomialSplineVectorSpaceCurveTest.cpp  PolynomialSplinesTest.cpp  test_Coefficient.cpp  test_CoefficientManager.cpp  test_Expressions.cpp  test_Expressions_Laser.cpp  test_Expressions_Slerp_SE2.cpp  test_Expressions_Slerp_SE3.cpp  test_Helpers.hpp  test_Hermite.cpp  test_HermiteCoefficientManager.cpp  test_LocalSupport2CoefficientManager.cpp  test_MITb_dataset.cpp  test_MITb_dataset_ISAM2.cpp  test_MITb_dataset_SE2.cpp  test_Pose2_Expressions.cpp  test_SE3Coefficient.cpp  test_SE3CompositionCurve.cpp  test_SE3_Sinus_Circle.cpp  test_main.cpp
curves_opt/: CMakeLists.txt  package.xml
curves_opt/include/curves_opt/: PolynomialSplineContainerOpt.hpp  PolynomialSplineContainerOpt.tpp  PolynomialSplineScalarCurveOpt.hpp  polynomial_splines_containers.hpp
curves_opt/src/: PolynomialSplineContainerOpt.cpp
curves_opt/test/: PolynomialSplineContainerTest.cpp  PolynomialSplineQuinticScalarCurveTest.cpp  PolynomialSplinesTest.cpp
curves_ros/: CMakeLists.txt  package.xml
curves_ros/include/curves_ros/: RosJointTrajectoryInterface.hpp  RosMultiDOFJointTrajectoryInterface.hpp  RosMultiDOFJointTrajectoryTranslationInterface.hpp
curves_ros/src/: RosJointTrajectoryInterface.cpp  RosMultiDOFJointTrajectoryInterface.cpp  RosMultiDOFJointTrajectoryTranslationInterface.cpp
