<?xml version="1.0"?>
<package format="2">
  <name>curves</name>
  <version>0.0.1</version>
  <description>curves</description>

  <maintainer email="paul.furgale@gmail.com">Paul Furgale</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>robot_utils</depend>
  <depend>eigen</depend>
  <depend>boost</depend>
  <depend>glog_catkin</depend>
</package>

