<?xml version="1.0"?>
<package format="2">
  <name>curves</name>
  <version>0.4.0</version>
  <description>Curves spline library.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ethz-asl/curves</url>
  <author>Renaud Dubé</author>
  <author>Abel Gawel</author>
  <author>Péter Fankhauser</author>
  <author>Dario Bellicoso</author>
  <author>Christian Gehring</author>
  <author>Mike Bosse</author>
  <author>Paul Furgale</author>
  <author>Gabriel Agamennoni</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>kindr</depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>boost</depend>
  <depend>libgoogle-glog-dev</depend>
</package>
