<?xml version="1.0"?>
<package>
  <name>curves_ros</name>
  <version>0.1.0</version>
  <description>The curves_ros package</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://bitbucket.org/ethz-asl-lr/curves</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>curves</build_depend>
  <build_depend>kindr_ros</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>curves</run_depend>
  <run_depend>kindr_ros</run_depend>
  <run_depend>trajectory_msgs</run_depend>
</package>