<?xml version="1.0"?>
<package format="2">
  <name>curves_ros</name>
  <version>0.0.1</version>
  <description>The curves_ros package</description>
  <maintainer email="pfankhauser@ethz.ch">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">http://bitbucket.org/ethz-asl-lr/curves</url>
  <author email="pfankhauser@ethz.ch">Peter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>curves</depend>
  <depend>kindr_ros</depend>
  <depend>trajectory_msgs</depend>
  <depend>eigen</depend>
</package>