<?xml version="1.0"?>
<package format="2">
  <name>curves_ros</name>
  <version>0.4.0</version>
  <description>ROS interface for curves library.</description>
  <maintainer email="pfankhauser@anybotics.com">Peter Fankhauser</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/ethz-asl/curves</url>
  <author email="pfankhauser@anybotics.com">Péter Fankhauser</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>curves</depend>
  <depend>kindr_ros</depend>
  <depend>trajectory_msgs</depend>
  <build_export_depend>eigen</build_export_depend>
</package>
